--- a/login.html
+++ b/login.html
@@ -30,42 +30,21 @@
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
 
-    <title>Congratulations</title>
+    <title>Login</title>
   </head>
 
   <body>
-    <!-- banner -->
-    <section class="mt-4 mb-3">
-      <img src="/imgs/rectangle.png" alt="" />
-    </section>
+    <section class="login">
+      <h2>ادخل رقم الواتس اب الخاص بك 👋</h2>
+      <p>
+        هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا
+        النص من مولد النص العربى،
+      </p>
+      <input type="text" placeholder="رقم الجوال" />
 
-    <!-- add_auctions -->
-    <section class="add_auctions">
-      <h1>
-        هنا عنوان المنتج الذين سيتم المزايدة علية هذا النص لعرضه كمثال فقط
-      </h1>
-    </section>
-
-    <!-- Congratulations -->
-    <section class="congratulations">
-      <h2 class="congratulations_title">تهانينا لقد فزت في المزايدة 🎉</h2>
-      <div class="owner_price">
-        <p class="owner">
-          يمكنك الان التواصل مع صاحب السلعة على الواتس اب الخاص به، لإتمام عملية
-          الشراء
-        </p>
-        <div class="owner_AllPrice">
-          <p>السعر الحالي</p>
-          <h2>230000 ر.س</h2>
-        </div>
+      <div class="entrance">
+        <a href="#">دخول</a>
       </div>
-
-      <!-- Add auction -->
-      <section class="request_auction">
-        <div class="request">
-          <a href="#">طلب تواصل مع صاحب السلعة</a>
-        </div>
-      </section>
     </section>
 
     <script src="js/bootstrap.min.js"></script>
