--- a/waiting_auction.html
+++ b/waiting_auction.html
@@ -30,42 +30,38 @@
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
 
-    <title>Congratulations</title>
+    <title>Waiting Auctions</title>
   </head>
 
   <body>
     <!-- banner -->
-    <section class="mt-4 mb-3">
-      <img src="/imgs/rectangle.png" alt="" />
+    <section class="banner">
+      <img src="/imgs/00.png" alt="" />
+      <img src="/imgs/00.png" alt="" />
+      <img src="/imgs/00.png" alt="" />
+      <img src="/imgs/00.png" alt="" />
     </section>
 
     <!-- add_auctions -->
-    <section class="add_auctions">
+    <section class="add_auctions mb-5 pb-5">
       <h1>
         هنا عنوان المنتج الذين سيتم المزايدة علية هذا النص لعرضه كمثال فقط
       </h1>
     </section>
 
-    <!-- Congratulations -->
-    <section class="congratulations">
-      <h2 class="congratulations_title">تهانينا لقد فزت في المزايدة 🎉</h2>
-      <div class="owner_price">
-        <p class="owner">
-          يمكنك الان التواصل مع صاحب السلعة على الواتس اب الخاص به، لإتمام عملية
-          الشراء
-        </p>
-        <div class="owner_AllPrice">
-          <p>السعر الحالي</p>
-          <h2>230000 ر.س</h2>
-        </div>
+    <!-- Total -->
+    <section class="auction_total mt-5 pt-5">
+      <div class="total">
+        <h2>الإجمالي 00.000 ر.س.</h2>
+        <p>رسوم المزاد 1%، وقيمة الضريبة المضافة 15%</p>
       </div>
+    </section>
 
-      <!-- Add auction -->
-      <section class="request_auction">
-        <div class="request">
-          <a href="#">طلب تواصل مع صاحب السلعة</a>
-        </div>
-      </section>
+    <!-- Add auction -->
+    <section class="Waiting_auction">
+      <div class="Waiting">
+        <a href="#">بإنتظار بدء المزاد</a>
+      </div>
     </section>
 
     <script src="js/bootstrap.min.js"></script>
