--- a/Auctions.html
+++ b/Auctions.html
@@ -30,13 +30,12 @@
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
 
-    <title>Home</title>
+    <title>Auctions</title>
   </head>
 
   <body>
     <!-- Start Welcome -->
     <section class="Welcome">
-      <h1>أهلاًوسهلاً, فهد</h1>
       <ul class="list">
         <li class="active"><a href="">الكل</a></li>
         <li><a href="">سيارات</a></li>
