--- a/add_photos.html
+++ b/add_photos.html
@@ -30,48 +30,43 @@
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
 
-    <title>Recent transactions</title>
+    <title>Add Photos</title>
   </head>
 
   <body>
-    <!-- Start Welcome -->
-    <section class="Welcome">
-      <h1>أهلاًوسهلاً, فهد</h1>
+    <section class="personalData">
+      <h2>أضف صور لإعلانك</h2>
+      <p>قم بإضافة صور للأعلان المراد اضافته، ليظهر بشكل مثالي للمستخدمين.</p>
+    </section>
+
+    <section class="add_img">
+      <img src="imgs/Frame.png" alt="" />
+      <div class="delete">
+        <a href=""><img src="imgs/delete.png" alt="" /></a>
+      </div>
+    </section>
+
+    <section class="personalData">
+      <h2>أختر التصنيف</h2>
+      <p>قم بإختيار التصنيف الخاص بمزادك، ليظهر بشكل مثالي للمستخدمين.</p>
+    </section>
+
+    <section class="personal_data">
       <ul class="list">
-        <li class="active"><a href="">الكل</a></li>
         <li><a href="">سيارات</a></li>
-        <li><a href="">لوحات سيارات</a></li>
+        <li class="active"><a href="">لوحات سيارات</a></li>
         <li><a href="">أرقام</a></li>
+        <li><a href="">أخرى</a></li>
+        <li><a href="">أخرى</a></li>
+        <li><a href="">أخرى</a></li>
+        <li><a href="">أخرى</a></li>
         <li><a href="">أخرى</a></li>
       </ul>
     </section>
-    <!-- End Welcome -->
 
-    <!-- لا يوجد معاملات حديثة -->
-    <section class="transactions">
-      <h2>لا يوجد معاملات حديثة</h2>
-      <p>
-        يبدو أنك لم تقم بأي معاملة. سيظهر هنا أشخاص الذين أرسلت إليهم أموالاً
-        مؤخراً.
-      </p>
-    </section>
-
-    <!-- Start Header -->
-    <section expand="lg" class="header">
-      <div class="links">
-        <img src="imgs/home.png" alt="الرئيسية" />
-        <a href="index.html">الرئيسية</a>
-      </div>
-      <div class="links">
-        <img src="imgs/auctions.png" alt="مزاداتي" />
-        <a href="Auctions.html"> مزاداتي </a>
-      </div>
-      <div class="links">
-        <img src="imgs/settings.png" alt="الإعدادات" />
-        <a href="">الإعدادات</a>
-      </div>
-    </section>
-    <!-- End Header -->
+    <div class="entrance">
+      <a href="#">التالي</a>
+    </div>
 
     <script src="js/bootstrap.min.js"></script>
   </body>
