--- a/fee_amount.html
+++ b/fee_amount.html
@@ -30,45 +30,59 @@
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
 
-    <title>Add Photos</title>
+    <title>Fee amount</title>
   </head>
 
   <body>
     <section class="add-photos">
       <section class="personalData">
-        <h2>أضف صور لإعلانك</h2>
-        <p>قم بإضافة صور للأعلان المراد اضافته، ليظهر بشكل مثالي للمستخدمين.</p>
+        <h2>مبلغ الرسوم</h2>
+        <p>
+          هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا
+          النص من مولد النص العربى،
+        </p>
       </section>
 
-      <section class="add_img">
-        <input type="file" placeholder="+" />
-        <!-- <img src="imgs/Frame.png" alt="" /> -->
-        <div class="delete">
-          <a href=""><img src="imgs/delete.png" alt="" /></a>
+      <section class="auction_fees">
+        <h2>رسوم المزاد</h2>
+        <p>شامل ضريبة القيمة المضافة</p>
+        <div class="auction_fee_amount">
+          <p>قيمة رسوم المزاد</p>
+          <p>100.00 ر.س</p>
+        </div>
+        <div class="auction_fee_amount">
+          <p>قيمة ضريبة القيمة المضافة 15%</p>
+          <p>100.00 ر.س</p>
+        </div>
+        <h5>200.00 ر.س</h5>
+      </section>
+
+      <section>
+        <div class="payment_bay">
+          <a href="#">
+            <img src="imgs/bay.png" alt="bay" />
+            <span>الدفع عبر ابل باي</span>
+          </a>
+        </div>
+
+        <div class="payment_visa">
+          <a href="#">
+            <img src="imgs/visa.png" alt="bay" />
+            <span>الدفع عبر بطاقة فيزا</span>
+          </a>
+        </div>
+
+        <div class="payment_mdy">
+          <a href="#">
+            <img src="imgs/mdy.png" alt="bay" />
+            <span>الدفع عبر بطاقة مدى</span>
+          </a>
+        </div>
+
+        <div class="payment">
+          <a href="#"> دفع </a>
         </div>
       </section>
-
-      <section class="personalData">
-        <h2>أختر التصنيف</h2>
-        <p>قم بإختيار التصنيف الخاص بمزادك، ليظهر بشكل مثالي للمستخدمين.</p>
-      </section>
-
-      <section class="personal_data">
-        <ul class="list">
-          <li><a href="">سيارات</a></li>
-          <li class="active"><a href="">لوحات سيارات</a></li>
-          <li><a href="">أرقام</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-        </ul>
-      </section>
-
-      <div class="entrance">
-        <a href="fee_amount.html">التالي</a>
-      </div>
     </section>
 
     <script src="js/bootstrap.min.js"></script>
