--- a/payment_successfully.html
+++ b/payment_successfully.html
@@ -30,45 +30,15 @@
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
 
-    <title>Add Photos</title>
+    <title>Payment successfully</title>
   </head>
 
   <body>
-    <section class="add-photos">
-      <section class="personalData">
-        <h2>أضف صور لإعلانك</h2>
-        <p>قم بإضافة صور للأعلان المراد اضافته، ليظهر بشكل مثالي للمستخدمين.</p>
-      </section>
-
-      <section class="add_img">
-        <input type="file" placeholder="+" />
-        <!-- <img src="imgs/Frame.png" alt="" /> -->
-        <div class="delete">
-          <a href=""><img src="imgs/delete.png" alt="" /></a>
-        </div>
-      </section>
-
-      <section class="personalData">
-        <h2>أختر التصنيف</h2>
-        <p>قم بإختيار التصنيف الخاص بمزادك، ليظهر بشكل مثالي للمستخدمين.</p>
-      </section>
-
-      <section class="personal_data">
-        <ul class="list">
-          <li><a href="">سيارات</a></li>
-          <li class="active"><a href="">لوحات سيارات</a></li>
-          <li><a href="">أرقام</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-        </ul>
-      </section>
-
-      <div class="entrance">
-        <a href="fee_amount.html">التالي</a>
-      </div>
+    <section class="payment_successfully">
+      <img src="imgs/true.png" alt="true">
+      <h2>تم الدفع بنجاح</h2>
+      <p>الرجاء الإنتظار ثواني يتم تحويلك الى الخطوة التالية ....</p>
+      <h5>Aug 2020-09-23 | 03:46:10</h5>
     </section>
 
     <script src="js/bootstrap.min.js"></script>
