--- a/send_congratulation.html
+++ b/send_congratulation.html
@@ -30,44 +30,20 @@
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
 
-    <title>Add Photos</title>
+    <title>Send Congratulation</title>
   </head>
 
   <body>
-    <section class="add-photos">
-      <section class="personalData">
-        <h2>أضف صور لإعلانك</h2>
-        <p>قم بإضافة صور للأعلان المراد اضافته، ليظهر بشكل مثالي للمستخدمين.</p>
-      </section>
+    <section class="payment_successfully">
+      <img src="imgs/Congratulation.png" alt="true" />
+      <h2>تهانينا، تم ارسال أعلانك</h2>
+      <p>
+        يبدو أنك لم تقم بأي معاملة. سيظهر هنا أشخاص الذين أرسلت إليهم أموالاً
+        مؤخراً.
+      </p>
 
-      <section class="add_img">
-        <input type="file" placeholder="+" />
-        <!-- <img src="imgs/Frame.png" alt="" /> -->
-        <div class="delete">
-          <a href=""><img src="imgs/delete.png" alt="" /></a>
-        </div>
-      </section>
-
-      <section class="personalData">
-        <h2>أختر التصنيف</h2>
-        <p>قم بإختيار التصنيف الخاص بمزادك، ليظهر بشكل مثالي للمستخدمين.</p>
-      </section>
-
-      <section class="personal_data">
-        <ul class="list">
-          <li><a href="">سيارات</a></li>
-          <li class="active"><a href="">لوحات سيارات</a></li>
-          <li><a href="">أرقام</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-          <li><a href="">أخرى</a></li>
-        </ul>
-      </section>
-
-      <div class="entrance">
-        <a href="fee_amount.html">التالي</a>
+      <div class="payment mt-5">
+        <a href="#"> رجوع </a>
       </div>
     </section>
 
