--- a/Add_advertisement.html
+++ b/Add_advertisement.html
@@ -43,17 +43,16 @@
 
       <input class="mt-3" type="text" placeholder="عنوان المزاد " />
 
-      <textarea
-        name=""
-        id=""
-       
-        placeholder="تفاصيل المزاد"
-      ></textarea>
+      <textarea name="" id="" placeholder="تفاصيل المزاد"></textarea>
 
       <div class="entrance">
-        <a href="#">التالي</a>
+        <button>التالي</button>
       </div>
     </section>
+
+    <div class="entrance">
+      <button>التالي</button>
+    </div>
 
     <script src="js/bootstrap.min.js"></script>
   </body>
