--- a/Personal_data copy.html
+++ b/Personal_data copy.html
@@ -34,7 +34,7 @@
   </head>
 
   <body>
-    <section class="personalData">
+    <form class="personalData">
       <h2>الإعدادات</h2>
       <p>
         هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا
@@ -60,9 +60,9 @@
       </div>
 
       <div class="entrance">
-        <a href="#">حفظ</a>
+        <button>حفظ</button>
       </div>
-    </section>
+    </form>
 
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
