--- a/add_auctions.html
+++ b/add_auctions.html
@@ -143,12 +143,9 @@
       </div>
     </section>
 
-
     <!-- Add auction -->
     <section class="Add_auction">
-      <div class="Add">
-        <a href="#">إضافة مزايدة 500 ر.س.</a>
-      </div>
+      <button class="Add">إضافة مزايدة 500 ر.س.</button>
     </section>
 
     <script src="js/bootstrap.min.js"></script>
