--- a/congratulations.html
+++ b/congratulations.html
@@ -61,11 +61,9 @@
       </div>
 
       <!-- Add auction -->
-      <section class="request_auction">
-        <div class="request">
-          <a href="#">طلب تواصل مع صاحب السلعة</a>
-        </div>
-      </section>
+      <form class="request_auction">
+        <button class="request">طلب تواصل مع صاحب السلعة</button>
+      </form>
     </section>
 
     <script src="js/bootstrap.min.js"></script>
