--- a/enter_auction.html
+++ b/enter_auction.html
@@ -59,9 +59,7 @@
 
     <!-- Add auction -->
     <section class="Add_auction">
-      <div class="Add">
-        <a href="#">طلب الدخول الى المزاد</a>
-      </div>
+        <button class="Add">طلب الدخول الى المزاد</button>
     </section>
 
     <script src="js/bootstrap.min.js"></script>
