--- a/fee_amount.html
+++ b/fee_amount.html
@@ -59,28 +59,28 @@
 
       <section>
         <div class="payment_bay">
-          <a href="#">
+          <button>
             <img src="imgs/bay.png" alt="bay" />
             <span>الدفع عبر ابل باي</span>
-          </a>
+          </button>
         </div>
 
         <div class="payment_visa">
-          <a href="#">
+          <button>
             <img src="imgs/visa.png" alt="bay" />
             <span>الدفع عبر بطاقة فيزا</span>
-          </a>
+          </button>
         </div>
 
         <div class="payment_mdy">
-          <a href="#">
+          <button>
             <img src="imgs/mdy.png" alt="bay" />
             <span>الدفع عبر بطاقة مدى</span>
-          </a>
+          </button>
         </div>
 
         <div class="payment">
-          <a href="#"> دفع </a>
+          <button> دفع </button>
         </div>
       </section>
     </section>
