--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
           </div>
 
           <div class="img_card">
-            <img src="imgs/house.png" alt="" />
+            <label for="#" style="padding: 2px 15px 5px">جديد</label>
+            <img src="imgs/homeImg.png" alt="homeImg" />
           </div>
         </div>
       </div>
@@ -91,8 +92,9 @@
             </div>
           </div>
 
-          <div class="col-sm-6 img_card">
-            <img src="/imgs/house2.png" alt="" />
+          <div class="img_card">
+            <label for="#" style="color: #ce0000">منتهي</label>
+            <img src="imgs/homeImg.png" alt="homeImg" />
           </div>
         </div>
       </div>
@@ -115,8 +117,9 @@
             </div>
           </div>
 
-          <div class="col-sm-6 img_card">
-            <img src="/imgs/house3.png" alt="" />
+          <div class="img_card">
+            <label for="#" style="color: #ce6300">بالإنتظار</label>
+            <img src="imgs/homeImg.png" alt="homeImg" />
           </div>
         </div>
       </div>
