--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
       <input type="text" placeholder="رقم الجوال" />
 
       <div class="entrance">
-        <a href="#">دخول</a>
+        <button>دخول</button>
       </div>
     </section>
 
