--- a/open_finished.html
+++ b/open_finished.html
@@ -37,9 +37,9 @@
     <!-- Start Welcome -->
     <section class="Welcome">
       <h1>أهلاًوسهلاً, فهد</h1>
-      <ul class="list">
-        <li class="open"><a href="">المفتوحة</a></li>
-        <li class="finished"><a href="">منتهية</a></li>
+      <ul class="open_finished">
+        <li><button class="open">المفتوحة</button></li>
+        <li><button class="finished">منتهية</button></li>
       </ul>
     </section>
     <!-- End Welcome -->
