--- a/send_congratulation.html
+++ b/send_congratulation.html
@@ -43,7 +43,7 @@
       </p>
 
       <div class="payment mt-5">
-        <a href="#"> رجوع </a>
+        <button> رجوع </button>
       </div>
     </section>
 
