--- a/update_personal_data copy.html
+++ b/update_personal_data copy.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="entrance">
-        <a href="#">تحديث</a>
+        <button>تحديث</button>
       </div>
     </section>
 
