--- a/waiting_auction.html
+++ b/waiting_auction.html
@@ -60,7 +60,7 @@
     <!-- Add auction -->
     <section class="Waiting_auction">
       <div class="Waiting">
-        <a href="#">بإنتظار بدء المزاد</a>
+        <button>بإنتظار بدء المزاد</button>
       </div>
     </section>
 
