--- a/Auctions.html
+++ b/Auctions.html
@@ -67,7 +67,8 @@
           </div>
 
           <div class="img_card">
-            <img src="imgs/house.png" alt="" />
+            <label for="#" style="padding: 2px 15px 5px">جديد</label>
+            <img src="imgs/homeImg.png" alt="homeImg" />
           </div>
         </div>
       </div>
@@ -90,8 +91,9 @@
             </div>
           </div>
 
-          <div class="col-sm-6 img_card">
-            <img src="/imgs/house2.png" alt="" />
+          <div class="img_card">
+            <label for="#" style="color: #ce0000">منتهي</label>
+            <img src="imgs/homeImg.png" alt="homeImg" />
           </div>
         </div>
       </div>
@@ -114,8 +116,9 @@
             </div>
           </div>
 
-          <div class="col-sm-6 img_card">
-            <img src="/imgs/house3.png" alt="" />
+          <div class="img_card">
+            <label for="#" style="color: #ce6300">بالإنتظار</label>
+            <img src="imgs/homeImg.png" alt="homeImg" />
           </div>
         </div>
       </div>
