--- a/verification.html
+++ b/verification.html
@@ -43,7 +43,7 @@
       <input type="text" placeholder="رقم الجوال" />
 
       <div class="entrance">
-        <a href="#">تحقق</a>
+        <button>تحقق</button>
       </div>
     </section>
 
